k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: digiwise-backend
  labels:
    managed-by: digiwise-hosting
---
apiVersion: v1
kind: Namespace
metadata:
  name: digiwise-frontend
  labels:
    managed-by: digiwise-hosting
---
apiVersion: v1
kind: Namespace
metadata:
  name: digiwise-databases
  labels:
    managed-by: digiwise-hosting
