k8s/base/postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: digiwise-postgres-external
  namespace: digiwise-databases
  labels:
    cnpg.io/cluster: digiwise-postgres
spec:
  type: NodePort
  selector:
    cnpg.io/cluster: digiwise-postgres
    role: primary
  ports:
    - name: postgresql
      port: 5432
      targetPort: 5432
      nodePort: 30543
      protocol: TCP
